<resources>
    <string name="application_title">BP Diary</string>
    <string name="application_name">BP Diary</string>
    <string name="tall_cm">cm</string>
    <string name="tall_feet">ft</string>
    <string name="weight_kg">kg</string>
    <string name="weight_lbs">lbs</string>
    <string name="weight_bmi">BMI</string>
    <string name="data_sync_dialog">Now sync your data.</string>
    <string name="dont_show_anytime">Don\'t see %1$sdays</string>
    <string name="device_connect_ble_bp">The blood pressure device is connected.</string>
    <string name="device_connect_ble_ws">The weight scale device is connected.</string>
    <string name="saved_bp_data_01">Blood pressure data is saved.</string>
    <string name="saved_bp_data_02">Blood pressure data</string>
    <string name="saved_bp_data_03">is saved.</string>
    <string name="saved_ws_data">Weight data is saved.</string>
    <string name="ws_main_txt_default">Welcome : )\nPlease \'Enter\' to start BP Diary</string>
    <string name="weighing_scale_main_txt_status_low">Underweight</string>
    <string name="weighing_scale_main_txt_status_normal">Normal</string>
    <string name="weighing_scale_main_txt_status_approach">Overweight</string>
    <string name="weighing_scale_main_txt_status_obesity">Obese</string>
    <string name="weighing_scale_main_txt_status_very_obesity">Severely obese</string>
    <string name="weighing_scale_main_txt_bmi">Obesity</string>
    <string name="weight_input_weight">Weight</string>
    <string name="weight_unit">Unit</string>
    <string name="weight_input_weight_add_memo">Touch here to enter memo.</string>
    <string name="weight_input">Weight</string>
    <string name="weight_update">Edit</string>
    <string name="weight_guide_title">Guide for weight measurement</string>
    <string name="weight_guide_content">BP Diary automatically saves the weight record\nfrom the scale paired with your smartphone.</string>
    <string name="weight_standard">Weight Index</string>
    <string name="weight_standard_who">※Source: BMI Index</string>
    <string name="weight_standard_tip">Note: These figures are only for references, and please consult with specialist for proper diagnosis and treatment.</string>
    <string name="weight_kg_unit">Weight</string>
    <string name="weight_lbs_unit">Weight </string>
    <string name="weight_bmi_unit">Body Mass Index</string>
    <string name="weight_set_goal">Your Goal (weight)</string>
    <string name="weight_supported_blutooth_ws_device">Available the scale</string>
    <string name="weight_manual_input_ws_management">As for other devices, you can manage your weight\nby the manual input function.</string>
    <string name="bp_main_txt_default">Welcome : )\nPlease \'Enter\' to start BP Diary</string>
    <string name="bp_input_title">Blood Pressure</string>
    <string name="bp_main_txt_status_low">Hypotension</string>
    <string name="bp_main_txt_status_normal">Normal</string>
    <string name="bp_main_txt_status_approach">Pre-hypertension</string>
    <string name="bp_main_txt_status_high_one">Hypertension Stage 1</string>
    <string name="bp_main_txt_status_high_two">Hypertension Stage 2</string>
    <string name="bp_main_txt_status_very_high">Hypertensive Crisis</string>
    <string name="bp_guide_title">Guide for measurement</string>
<string name="bp_guide_content">BP Diary automatically saves the blood pressure recorded\nfrom the
tonometer paired with your smartphone.</string>
    <string name="bp_guide_btn">Close</string>
    <string name="bp_graph_txt_unit">mmHg</string>
    <string name="bp_sys">Systolic</string>
    <string name="bp_dia">Diastolic</string>
    <string name="bp_where_arm">Part : </string>
    <string name="bp_left_arm">Left arm</string>
    <string name="bp_right_arm">Right arm</string>
    <string name="bp_no_arm">Not select</string>
    <string name="bp_goal_title_text"> Please adjust your goal freely</string>
    <string name="bp_goal_y_scale">SYS\n(mmHg)</string>
    <string name="bp_goal_x_scale">DIA\n(mmHg)</string>
    <string name="bp_goal_title">Your Goal (blood pressure)</string>
    <string name="bp_standard_title">Blood Pressure Index</string>
    <string name="bp_standard_goal">My Goal</string>
    <string name="bp_standard_attention">These figures are only for the reference. Please consult a doctor for your treatments.</string>
    <string name="bp_measure_txt_guide_default">Measure your blood pressure.</string>
    <string name="bp_measure_txt_noti">Reconnect the BP Meter\nif it doesn’t work.</string>
    <string name="bp_measure_txt_guide_measuring_top">Measuring...</string>
    <string name="bp_measure_txt_guide_measuring_botoom">Be sure not to speak or move.</string>
    <string name="bp_measure_txt_guide_end">Measurement complete.</string>
    <string name="bp_measure_txt_display_default">Turn on the BP Meter.</string>
    <string name="bp_measure_txt_display_measuring">Be connected\nwith a BP Meter.</string>
    <string name="bp_set_goal">Your Goal (blood glucose)</string>
    <string name="bp_sys_set_goal">Goal SYS : </string>
    <string name="bp_dia_set_goal">DIA : </string>
    <string name="bp_auto_measure">Auto-measurement</string>
    <string name="bp_guide_measure">Guide</string>
    <string name="bp_sys_unit">SYS</string>
    <string name="bp_dia_unit">DIA</string>
    <string name="bp_sys_direct_input">Directly enter your systolic</string>
    <string name="bp_sys_request_input_value">Please enter a systolic value.</string>
    <string name="bp_dia_direct_input">Directly enter your diastolic</string>
    <string name="bp_dia_request_input_value">Please enter a diastolic value.</string>
    <string name="bp_pulse_direct_input">Directly enter your pulse</string>
    <string name="bp_pulse_request_input_value">Please enter a pulse value.</string>
    <string name="manual_measure">Guide to measuring your blood pressure</string>
    <string name="manual_measure_slide1_text">Wind the cuff snugly\naround your arm allowing room for one fingertip.</string>
    <string name="manual_measure_slide2_text">Sit still and raise\nyour arm on level with your heart</string>
    <string name="manual_measure_slide3_text">After taking five-minutes to relax,\ntouch the measure button.</string>
    <string name="glucose_main_txt_default">Welcome : )\nPlease \'Enter\' to start BP Diary</string>
    <string name="glucose_input_title">Blood glucose</string>
    <string name="glucose_main_txt_status_low">Low</string>
    <string name="glucose_main_txt_status_normal">Normal</string>
    <string name="glucose_main_txt_status_over">High</string>
    <string name="glucose_main_txt_meal_before">Before</string>
    <string name="glucose_main_txt_meal_after">After</string>
    <string name="glucose_input_glucose">Blood Glucose</string>
    <string name="glucose_unit">Unit</string>
    <string name="glucose_after_meal">After</string>
    <string name="glucose_before_meal">Before</string>
    <string name="glucose_graph_after_meal">After:</string>
    <string name="glucose_graph_before_meal">Before:</string>
    <string name="glucose_graph_mg_dl">mg/dL</string>
    <string name="glucose_graph_mmol">mmol/L</string>
    <string name="glucose_meal_type">Condition : </string>
    <string name="glucose_before_meal_mg_dl_unit">Before</string>
    <string name="glucose_after_meal_mg_dl_unit">After</string>
    <string name="glucose_before_meal_mmol_unit">Before</string>
    <string name="glucose_after_meal_mmol_unit">After</string>
    <string name="glucose_standard">Blood Glucose Index</string>
    <string name="glucose_standard_tip">Note: These figures are only for references, and please consult with specialist for proper diagnosis and treatment.</string>
    <string name="glucose_set_goal_normal">Normal</string>
    <string name="glucose_input_before_meal">Before</string>
    <string name="glucose_input_after_meal">After</string>
    <string name="glucose_default_before_meal">Before</string>
    <string name="medicine_alarm_title">Notice for medication</string>
    <string name="medicine_alarm_content">BP Diary: Do not forget to take your medicine.</string>
    <string name="measure_alarm_title">Notice for measurement</string>
    <string name="measure_alarm_content">BP Diary: Do not forget to record your health condition!</string>
    <string name="medicine_alarm_time">10:48 am</string>
    <string name="setting_am">Morning</string>
    <string name="setting_activity_setting">Notice</string>
    <string name="setting_activity_data">Export/Import</string>
    <string name="setting_leave">Deactivate</string>
    <string name="setting_activity_account">Account</string>
    <string name="setting_activity_add_alarm">Add alarms</string>
    <string name="setting_repeat">Repeat</string>
    <string name="setting_not_set">Not accept</string>
    <string name="setting_sound">Sound</string>
    <string name="setting_label">Label</string>
    <string name="setting_alarm">Alarm</string>
    <string name="setting_intro_sound">Introduced Sound</string>
    <string name="setting_re_alarm">Again</string>
    <string name="setting_activity_alarm">Alarm</string>
    <string name="setting_activity_setting_alarm">Alarm</string>
    <string name="setting_medicine_alarm">Alarm for medication</string>
    <string name="setting_meassure_alarm">Alarm for measurement</string>
    <string name="setting_alarm_medicine">There is no notification setting.\nPlease press \'+\' button at the top to set the notification.</string>
    <string name="setting_activity_birth">Birthday</string>
    <string name="setting_input_birth">Please enter your birthday.</string>
    <string name="setting_save">Save</string>
    <string name="setting_activity_password">Password</string>
    <string name="setting_input_password">Please enter your password</string>
    <string name="setting_input_pass_hint">Enter Password </string>
    <string name="setting_input_pass_check_hint">Confirm Password </string>
    <string name="setting_input_condition">Available 6~10 digits of letters, numbers and special characters</string>
    <string name="setting_connect_blood_pressure">Connect BP Meter</string>
    <string name="setting_connect_weight">Connect Scale</string>
    <string name="setting_blood_pressure_first">Please press \"connect\" button at the bottom </string>
    <string name="setting_blood_pressure_second">Please press START button for 3seconds and\ncheck the \"Pr\" on the screen.</string>
    <string name="setting_blood_pressure_third">Please select \"Connect with pairs\"</string>
    <string name="setting_cancel">Cancel</string>
    <string name="setting_guide_leave">Information of secede</string>
    <string name="setting_check_leave">Do you agree to the terms below?</string>
    <string name="setting_leave_first">- When you deactivate your account, your profile and all data(including blood pressure, weight, blood glucose) disappear and cannot be restored.</string>
    <string name="setting_leave_second">- Even if you join again with the same account after deactivating your account, your existing data cannot be retrieved.</string>
    <string name="setting_leave_third">Even if you change your device or phone number, you can still use your data on your new device with the same Google Account from your previous smartphone.</string>
    <string name="setting_profile_input_name">Please enter your name.</string>
    <string name="common_txt_cancel">Cancel</string>
    <string name="common_enter_profile_first_name">Name</string>
    <string name="common_enter_profile_last_name">Family name</string>
    <string name="terms_text">By creating an account, you agree to BP Diary\'s Terms of service and Privacy policy.</string>
    <string name="setting_terms_of_use">Terms of service</string>
    <string name="setting_privacy_treatment_policy">Privacy policy</string>
    <string name="dialog_confirm">Ok</string>
</resources>