<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_leave"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fbfbfb"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/setting_guide_leave"
        android:textColor="@color/color_222222"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_leave_title"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/setting_check_leave"
        android:textColor="@color/color_f06515"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_leave_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:text="@string/setting_leave_first"
            android:textColor="@color/color_5b5854"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/setting_leave_second"
            android:textColor="@color/color_5b5854"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/setting_leave_third"
            android:textColor="@color/color_5b5854"
            android:textSize="12sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="17dp"
        android:paddingLeft="26dp"
        android:paddingRight="26dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_leave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_save_solid"
                android:text="@string/setting_leave"
                android:textColor="@color/color_ffffff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_shape_not_solid"
                android:text="@string/setting_cancel"
                android:textColor="@color/color_555053"
                android:textSize="16sp" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>