<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_profile_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fbfbfb"
    android:orientation="vertical">

    <include
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/profile_margin_left"
        android:paddingRight="@dimen/profile_margin_left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/setting_input_password"
            android:textColor="@color/color_000000"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_profile_shape"
            android:gravity="center"
            android:hint="@string/setting_input_pass_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/color_bab9b9"
            android:textSize="@dimen/edit_password_size" />

        <EditText
            android:id="@+id/et_password_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_profile_shape"
            android:gravity="center"
            android:hint="@string/setting_input_pass_check_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/color_bab9b9"
            android:textSize="@dimen/edit_password_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/setting_input_condition"
            android:textColor="@color/color_bfbebe"
            android:textSize="13sp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/btn_change_pass_save"
            android:layout_marginBottom="14dp"
            android:background="@color/color_eff0f2" />

        <Button
            android:id="@+id/btn_change_pass_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:background="@drawable/btn_shape_solid"
            android:enabled="false"
            android:text="@string/setting_save"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </RelativeLayout>
</LinearLayout>
