<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_ffffff"
    android:gravity="right"
    android:orientation="vertical"
    android:paddingRight="22dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_default_medicine"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bpdiary_noti_icon" />

        <LinearLayout
            android:id="@+id/ll_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_alarm_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine_alarm_title"
                    android:textColor="@color/color_000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_alarm_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="2dp"
                    android:gravity="right"
                    android:text="@string/medicine_alarm_time"
                    android:textColor="@color/color_76706c"
                    android:textSize="11sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_alarm_content"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:text="@string/medicine_alarm_content"
                android:textColor="@color/color_76706c"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_alarm_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/dialog_confirm"
        android:textColor="@color/color_222222"
        android:textSize="15sp" />

</LinearLayout>