<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_birth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fbfbfb"
    android:orientation="vertical">

    <include
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:paddingLeft="26dp"
        android:paddingRight="26dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_input_birth"
            android:textColor="@color/color_000000"
            android:textSize="13sp" />

        <Button
            android:textSize="16sp"
            android:id="@+id/btn_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_profile_shape"
            android:gravity="center"
            android:text="@string/setting_activity_birth"
            android:textColor="@color/color_bab9b9" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="26dp"
        android:paddingRight="26dp">

        <Button
            android:id="@+id/btn_change_pass_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/btn_shape_solid"
            android:text="@string/setting_save"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </FrameLayout>
</LinearLayout>
