<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:gravity="center"
        android:lineSpacingExtra="1dp"
        android:text="@string/terms_text"
        android:textColor="@color/color_666666"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:gravity="center"
                android:id="@+id/tv_terms_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_terms_of_use"
                android:textColor="@color/color_39b8e6"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:gravity="center"
                android:id="@+id/tv_terms_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_privacy_treatment_policy"
                android:textColor="@color/color_39b8e6"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>